# python-api-sample

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
db/: init.sql
dockerfile/: Dockerfile
employee/: main.py
employee/api/: item_api.py
employee/application/: item_command_service.py  item_query_service.py  item_schemas.py  item_service.py
employee/domain/: events.py  item.py  item_domain_service.py  item_factory.py  value_objects.py
employee/domain/generated_models/: models.py
employee/infrastructure/: database.py  item_repository.py  item_repository_adapter.py
employee/service/: item_service.py
tests/: conftest.py  test_domain_item.py  test_item_service.py  test_schema_item.py
